--- a/src/pages/PostsPage/PostsPage.module.scss
+++ b/src/pages/PostsPage/PostsPage.module.scss
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 2%;
+    //margin-top: 2%;
 
     .filterContainer {
       display: flex;
@@ -50,7 +50,7 @@
         padding: 20px;
         border-radius: 10px;
         width: 100%;
-        background-color: var(--background-third);
+        background-color: var(--background-secondary);
         cursor: pointer;
         backdrop-filter: blur(5px);
         overflow: hidden;
